<resources>
    <string name="app_name">booking_prison</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="welcome">Welcome</string>
    <string name="belum_punya_akun_sign_in">Belum Punya Akun? Sign In</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun_login">Sudah Punya Akun? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="no_ktp">No KTP</string>
    <string name="name">Name</string>
    <string name="no_telpon">No Telpon</string>
    <string name="_01_01_2000">01-01-2000</string>
</resources>