<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.example.booking_prison.view_model.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterActivity"
        android:background="@drawable/background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/form"
            android:text="@string/welcome"
            android:textSize="35sp"
            android:textStyle="bold"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="90dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"
                android:layout_marginTop="20dp"
                android:gravity="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="60dp"
                android:hint="@string/username"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:id="@+id/username"
                android:text="@={model.username}"
                android:autofillHints="name"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="120dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:text="@={model.password}"
                android:hint="@string/password"
                android:id="@+id/password"
                android:autofillHints="password"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#2596be"
                android:text="@string/login"
                android:onClickListener="@{model::onClickRegisterButton}"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/form"
            android:text="@string/sudah_punya_akun_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClickListener="@{model::onClickSingUp}"
            />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:translationZ="20dp"
            android:visibility="invisible"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>