<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.example.booking_prison.view_model.BookingViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.BookingActivity"
        android:background="@drawable/background">
        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_linear_layout_radius"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_back_button"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Booking"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ambil Antrian"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="60dp"
                android:hint="@string/name"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:text="@={model.name}"
                android:autofillHints="name"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="120dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:hint="@string/no_ktp"
                android:text="@={model.noKtp}"
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="180dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:hint="@string/no_telpon"
                android:text="@={model.noTelp}"
                android:autofillHints="password"
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="240dp"
                android:layout_marginHorizontal="20dp"
                android:text="@={model.alamat}"
                android:textSize="20sp"
                android:hint="Alamat"
                android:autofillHints="password"
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="300dp"
                android:layout_marginHorizontal="20dp"
                android:text="@={model.barang}"
                android:textSize="20sp"
                android:hint="Barang Bawaan"
                android:autofillHints="password"
                tools:ignore="TextFields" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="360dp"
                android:layout_marginHorizontal="20dp">
                <Spinner
                    android:id="@+id/dropdown_sesi"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_01_01_2000"
                    android:gravity="center"
                    android:background="#e0ded7"
                    android:id="@+id/date"
                    />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#2596be"
                android:text="@string/login"
                android:onClickListener="@{model::onClickBooking}"
                />

        </androidx.cardview.widget.CardView>
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:translationZ="20dp"
            android:visibility="invisible"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
